--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
     "lucide-react": "^0.344.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
-    "react-i18next": "^15.7.3"
+    "react-i18next": "^15.7.3",
+    "recharts": "^3.1.2"
   },
   "devDependencies": {
     "@eslint/js": "^9.9.1",
