première ébauche tiktok

--- a/package.json
+++ b/package.json
@@ -4,10 +4,14 @@
   "version": "0.0.0",
   "type": "module",
   "scripts": {
-    "dev": "vite",
+    "dev": "node scripts/check-server-deps.js && concurrently \"npm run server:dev\" \"vite\" --names \"TikTok,App\" --prefix-colors \"cyan,green\"",
+    "dev:app-only": "vite",
     "build": "vite build",
     "lint": "eslint .",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "server": "cd server && npm start",
+    "server:dev": "cd server && npm run dev",
+    "server:install": "cd server && npm install"
   },
   "dependencies": {
     "@supabase/supabase-js": "^2.56.1",
@@ -29,6 +33,7 @@
     "@types/react-i18next": "^7.8.3",
     "@vitejs/plugin-react": "^4.3.1",
     "autoprefixer": "^10.4.18",
+    "concurrently": "^8.2.2",
     "eslint": "^9.9.1",
     "eslint-plugin-react-hooks": "^5.1.0-rc.0",
     "eslint-plugin-react-refresh": "^0.4.11",
