--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "html2canvas": "^1.4.1",
     "i18next": "^25.4.2",
     "i18next-browser-languagedetector": "^8.2.0",
+    "idb": "^8.0.3",
     "jspdf": "^3.0.2",
     "lucide-react": "^0.344.0",
     "react": "^18.3.1",
@@ -37,6 +38,8 @@
     "tailwindcss": "^3.4.1",
     "typescript": "^5.5.3",
     "typescript-eslint": "^8.3.0",
-    "vite": "^5.4.2"
+    "vite": "^5.4.2",
+    "vite-plugin-pwa": "^1.1.0",
+    "workbox-window": "^7.4.0"
   }
 }
